# python-project-52

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml
locale/en/LC_MESSAGES/: django.po
locale/en_US/LC_MESSAGES/: django.po
locale/ru_RU/LC_MESSAGES/: django.po
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_options_alter_status_name.py
task_manager/tasks/: filters.py  forms.py  mixins.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0002_task_labels.py  0003_alter_task_labels.py  0004_rename_assignee_task_executor_alter_task_labels.py
task_manager/templates/: base.html  index.html  login.html
task_manager/templates/common/: confirm_delete.html  create_update.html
task_manager/templates/labels/: label_confirm_delete.html  label_create.html  label_list.html  label_update.html
task_manager/templates/statuses/: status_confirm_delete.html  status_create.html  status_list.html  status_update.html
task_manager/templates/tasks/: task_confirm_delete.html  task_create.html  task_detail.html  task_filter.html  task_list.html  task_update.html
task_manager/templates/users/: user_confirm_delete.html  (+3 more)
task_manager/tests/: test_statuses.py
task_manager/users/: forms.py  mixins.py  models.py  urls.py  views.py
task_manager/utils/: mixins.py  view_mixins.py
(+12 files in other folders)
